<package>
  <name> rviz_plugins </name>
  <description>

    Additional plugins for rviz

  </description>
  <version>0.1.0</version>
  <maintainer email="wakde.y@northeastern.edu">yash</maintainer>
  <maintainer email="wakde.y@northeastern.edu">yash</maintainer>
  <license>LGPLv3</license>
  <url>http://ros.org/wiki/rviz_plugins</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz            </build_depend>
  <build_depend>roscpp          </build_depend>
  <build_depend>qtbase5-dev     </build_depend>
  <build_depend>message_runtime </build_depend>

  <run_depend>rviz              </run_depend>
  <run_depend>message_runtime   </run_depend>
  <run_depend>roscpp            </run_depend>
  <run_depend>libqt5-core       </run_depend>
  <run_depend>libqt5-gui        </run_depend>
  <run_depend>libqt5-widgets    </run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
